fix: #step-indicator had some unwanted spacing, inherited by the spacing class. Make screenshot test.

--- a/packages/dnb-ui-lib/src/components/step-indicator/style/_step-indicator.scss
+++ b/packages/dnb-ui-lib/src/components/step-indicator/style/_step-indicator.scss
@@ -19,6 +19,11 @@
     list-style: none;
     align-items: flex-start;
   }
+  .dnb-spacing &__list,
+  .dnb-spacing &__list li {
+    margin-top: 0;
+    margin-bottom: 0;
+  }
 
   &__item {
     position: relative;
